--- a/Mindmap/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap/Mindmap.vcxproj
@@ -19,8 +19,6 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\..\..\..\..\Desktop\CopyKey.h" />
-    <ClInclude Include="..\..\..\..\..\Desktop\PasteKey.h" />
     <ClInclude Include="..\Array.h" />
     <ClInclude Include="..\Branch.h" />
     <ClInclude Include="..\BranchArray.h" />
@@ -30,6 +28,7 @@
     <ClInclude Include="..\Character.h" />
     <ClInclude Include="..\Clipboard.h" />
     <ClInclude Include="..\Composite.h" />
+    <ClInclude Include="..\CopyKey.h" />
     <ClInclude Include="..\DeleteKey.h" />
     <ClInclude Include="..\DeleteVisitor.h" />
     <ClInclude Include="..\DoubleByteCharacter.h" />
@@ -75,6 +74,7 @@
     <ClInclude Include="..\Page.h" />
     <ClInclude Include="..\PageApp.h" />
     <ClInclude Include="..\PageForm.h" />
+    <ClInclude Include="..\PasteKey.h" />
     <ClInclude Include="..\Row.h" />
     <ClInclude Include="..\ScrollAction.h" />
     <ClInclude Include="..\ScrollStrategy.h" />
@@ -106,8 +106,6 @@
     <ClInclude Include="..\WriteVisitor.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\..\..\..\..\Desktop\CopyKey.cpp" />
-    <ClCompile Include="..\..\..\..\..\Desktop\PasteKey.cpp" />
     <ClCompile Include="..\Branch.cpp" />
     <ClCompile Include="..\BranchArray.cpp" />
     <ClCompile Include="..\BranchIterator.cpp" />
@@ -116,6 +114,7 @@
     <ClCompile Include="..\Character.cpp" />
     <ClCompile Include="..\Clipboard.cpp" />
     <ClCompile Include="..\Composite.cpp" />
+    <ClCompile Include="..\CopyKey.cpp" />
     <ClCompile Include="..\DeleteKey.cpp" />
     <ClCompile Include="..\DeleteVisitor.cpp" />
     <ClCompile Include="..\DoubleByteCharacter.cpp" />
@@ -160,6 +159,7 @@
     <ClCompile Include="..\Page.cpp" />
     <ClCompile Include="..\PageApp.cpp" />
     <ClCompile Include="..\PageForm.cpp" />
+    <ClCompile Include="..\PasteKey.cpp" />
     <ClCompile Include="..\Row.cpp" />
     <ClCompile Include="..\ScrollAction.cpp" />
     <ClCompile Include="..\ScrollStrategy.cpp" />
