--- a/Mindmap/Mindmap/Mindmap.vcxproj
+++ b/Mindmap/Mindmap/Mindmap.vcxproj
@@ -22,6 +22,7 @@
     <ClInclude Include="..\Array.h" />
     <ClInclude Include="..\Branch.h" />
     <ClInclude Include="..\BranchArray.h" />
+    <ClInclude Include="..\BranchCopyTraverser.h" />
     <ClInclude Include="..\BranchIterator.h" />
     <ClInclude Include="..\BranchTraverser.h" />
     <ClInclude Include="..\Caret.h" />
@@ -108,6 +109,7 @@
   <ItemGroup>
     <ClCompile Include="..\Branch.cpp" />
     <ClCompile Include="..\BranchArray.cpp" />
+    <ClCompile Include="..\BranchCopyTraverser.cpp" />
     <ClCompile Include="..\BranchIterator.cpp" />
     <ClCompile Include="..\BranchTraverser.cpp" />
     <ClCompile Include="..\Caret.cpp" />
