--- a/Mindmap/Mindmap/Mindmap.vcxproj.filters
+++ b/Mindmap/Mindmap/Mindmap.vcxproj.filters
@@ -270,6 +270,9 @@
     <ClInclude Include="..\PasteKey.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="..\BranchCopyTraverser.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\Branch.cpp">
@@ -519,6 +522,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="..\PasteKey.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="..\BranchCopyTraverser.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
